Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/139
  New functions stackless.pickle_flags() and stackless.pickle_flags_default().
  They can be used to control pickling of certain objects.

- https://github.com/stackless-dev/stackless/issues/175
  Cleanup of the Stackless C-API: Including stackless_api.h in an extension
  module no longer defines internal stuff. Additionally I moved test code
  from module "stackless" into the new module "_teststackless".

- https://github.com/stackless-dev/stackless/issues/177
  Fix a crasher in prickelpit.c slp_cannot_execute().
  Stackless versions released after March 2017 can crash, if a program executes
  an unpickled tasklet, that lost its C-state. Now Stackless always raises
  RuntimeError.

- https://github.com/stackless-dev/stackless/issues/152
  C-Python bpo30860 consolidates stateful C globals under a single struct.
  Stackless also moves its stateful C globals to the appropriate structures
  (runtime-state or interpreter-state or thread-state). This change modifies
  some internal APIs and structures.

- https://github.com/stackless-dev/stackless/issues/149
  C-Python bpo-25612 (#1773) moves the exception state information from frame
  object to coroutine (generator/thread) object where it belongs. As a
  consequence Stackless moves the exception state information from thread
  to tasklet. This changes the pickle format of frame, tasklet and generator
  objects compared to previous major versions of Stackless.

- https://github.com/stackless-dev/stackless/issues/166
  Fix C-API functions PyEval_EvalFrameEx() and PyEval_EvalFrame().
  They are now compatible with C-Python.

- https://github.com/stackless-dev/stackless/issues/168